--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
         <input type="text" name="nombre" placeholder="Coloque su nombre"><br>
         <input type="text" name="apellido" placeholder="Coloque su apellido"><br>
         <input type="text" name="edad" placeholder="Coloque su edad"><br>
-        <button>SUBIR</button>
+        <button>REGISTRAR</button>
     </form>
     <script>
         const form = document.getElementById('form');
